# usaddress

./: .gitignore  README.md  pyproject.toml  setup.py  tox.ini
.github/workflows/: black.yml  docs.yml  tox.yml
docs/: conf.py  index.html  search.js  usaddress.html
docs/usaddress/: errors.html  resources.html  usaddress.html
parse_scripts/: import_osm.py  parse.py  parse_openaddress.py
scripts/: make_docs.py  scratch.py
src/usaddress/: __init__.py  errors.py  resources.py  usaddress.py
tests/: test_labeling.py  test_tagging.py  test_token_features.py  test_tokenizing.py
training/: README.md
