[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "usaddress"
dynamic = ["version"]
description = 'Parse US addresses using conditional random fields.'
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = ["overture", "osm", "openstreetmap", "mapping", "overture maps"]
authors = [{ name = "Will", email = "wahubsch@gmail.com" }]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.urls]
Documentation = "https://whubsch.github.io/usaddress/index.html"
Issues = "https://github.com/whubsch/usaddress/issues"
Source = "https://github.com/whubsch/usaddress"

[tool.hatch.version]
path = "src/usaddress/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = ["mypy>=1.0.0"]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/usaddress tests}"

[tool.coverage.run]
source_pkgs = ["usaddress", "tests"]
branch = true
parallel = true
omit = ["src/usaddress/__about__.py"]

[tool.coverage.paths]
usaddress = ["src/usaddress", "*/usaddress/src/usaddress"]
tests = ["tests", "*/usaddress/tests"]

[tool.coverage.report]
exclude_lines = ["no cov", "if __name__ == .__main__.:", "if TYPE_CHECKING:"]
